--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,52 @@
-/* Reset */
-
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
 }
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
+/* reset */
 img {
   max-width: 100%;
 }
 
-ul {
-  list-style: none;
+/* header */
+
+#header {
+  height: 75px;
+}
+#sidebar {
+  height: calc(100vh - 75px);
+  width: 80px;
+  background-image: url(../img/sidebar-bg.png);
+  background-color: #051e34;
+}
+#main {
+  width: calc(100% - 80px);
+  height: calc(100vh - 75px);
+}
+.mobile-logo {
+  height: 60px;
+}
+.input-group-text {
+  border: none;
+  background-color: #e5e5e5;
 }
 
-li {
-  display: inline-block;
+.form-control {
+  border: none;
+  background-color: #e5e5e5;
+  padding: 0px;
+}
+.bi-bell-fill {
+  color: #ff8f00;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-} */
-
-/* utils */
-
-/* .container {
-  max-width: 1080px;
-  padding: 0 15px;
-  margin: 0 auto;
+#sidebar {
+  display: flex;
 }
-.clearfix::after {
-  content: "";
-  display: block;
-  clear: both;
-} */
 
-/* debug */
+.avatar-class {
+  height: 40px;
+}
 
-/* .debug {
-  min-height: 80px;
-  background-color: #888;
-  padding: 2rem;
-}  */
+.blue-box {
+  height: 100px;
+  width: 100%;
+  background-color: #1b72e8;
+}
