--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-:root {
-}
 /* reset */
 img {
   max-width: 100%;
@@ -10,18 +8,31 @@ img {
 #header {
   height: 75px;
 }
+/* Logo */
+
+.mobile-logo {
+  height: 60px;
+}
+
+/* Sidebar */
+
 #sidebar {
   height: calc(100vh - 75px);
   width: 80px;
   background-image: url(../img/sidebar-bg.png);
   background-color: #051e34;
 }
+#sidebar .btn {
+  border: none;
+  display: inline-block;
+}
+
+/* main */
+
 #main {
   width: calc(100% - 80px);
   height: calc(100vh - 75px);
-}
-.mobile-logo {
-  height: 60px;
+  overflow: auto;
 }
 .input-group-text {
   border: none;
@@ -33,20 +44,32 @@ img {
   background-color: #e5e5e5;
   padding: 0px;
 }
+/* Font-icon */
+
 .bi-bell-fill {
   color: #ff8f00;
 }
-
-#sidebar {
-  display: flex;
+.fa-angles-right {
+  color: white;
 }
 
 .avatar-class {
   height: 40px;
 }
+/* Top blue-box */
 
 .blue-box {
-  height: 100px;
   width: 100%;
   background-color: #1b72e8;
+}
+.text-bg-subtle {
+  background-color: #165bba;
+}
+
+/* Media */
+
+@media screen and (min-width: 992px) {
+  #sidebar {
+    width: 150px;
+  }
 }
