--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ img {
   height: 60px;
 }
 
+.fa-list-ul,
+.fa-circle-question,
+.fa-ellipsis-vertical {
+  color: #5b5858;
+}
 /* Sidebar */
 
 #sidebar {
